internal/fixtures/architecture/negative/domain-framework/packages/domain/src/bad.ts
import { useState } from "react";

export const forbiddenFramework = useState;
